# rusty_sound

./: .gitignore  AGENTS.md  Cargo.toml
.cargo/: config.toml
.github/workflows/: android.yml
AndroidApp/: settings.gradle.kts
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/dev/music/rusty_sound/: MainActivity.kt
AndroidApp/app/src/main/res/values/: strings.xml  themes.xml
src/: app.rs  lib.rs  main.rs
src/bpm/: audio.rs  mod.rs  tap.rs
